--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,9 @@
+/* sass input file for randomRestaurants project
+*/
 img {
-    height: 225px;
-}
+  height: 225px; }
 
 h3 {
-    padding: 15px;
-}
-#chooseButton {
-    margin-bottom: 50px;
-    margin-top: 50px;
-}
+  padding: 15px; }
+
+/*# sourceMappingURL=style.css.map */
